fix: scrolling fixes, themed scrollbar and remove editor toolbar

--- a/src/app.css
+++ b/src/app.css
@@ -22,6 +22,8 @@ html {
   --color-base: 51 55 59;
   --color-crust: 32 35 37;
   --color-mantle: 13 14 15;
+  --scrollbar-thumb-color: rgb(var(--color-base));
+  --scrollbar-track-color: rgb(var(--color-surface2));
 }
 
 * {
@@ -36,18 +38,24 @@ html {
 }
 
 ::-webkit-scrollbar-track {
-  background: transparent;
+  background-color: var(--scrollbar-track-color);
+  border-radius: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #6c7086;
+  background-color: rgb(var(--color-base));
+  background-color: var(--scrollbar-thumb-color);
   border-radius: 999px;
 }
 
 /* Firefox */
-* {
-  scrollbar-width: thin;
-  scrollbar-color: #6c7086 transparent;
+/* NOTE: without @supports, it breaks webkit scrollbars */
+@supports (scrollbar-color: auto) {
+  * {
+    scrollbar-width: thin;
+    scrollbar-color: var(--scrollbar-thumb-color) var(--scrollbar-track-color);
+    scrollbar-color: red blue;
+  }
 }
 
 body {
